gcc/testsuite/rust/rustc/ui/did_you_mean/issue-38147-2.rs
struct Bar<'a> {
    s: &'a String
}

impl<'a> Bar<'a> {
    fn f(&mut self) {
        self.s.push('x');
// { dg-error ".E0596." "" { target *-*-* } .-1 }
    }
}

fn main() {}

